fix: Fixed dark mode
Fixed funtionality when user has dark mode

--- a/client/src/components/BookCard.scss
+++ b/client/src/components/BookCard.scss
@@ -22,6 +22,11 @@
         padding: 5px;
 
     }
+    @media (prefers-color-scheme: dark) {
+        background-color: rgb(255, 255, 255);
+        color: black;
+        border-color: var(--border-color);
+    }
 }
 
 .book-card-title {
